@@ -24,7 +24,6 @@
 #ifndef __CODECOMPLETION_IMPL_H__
 #define __CODECOMPLETION_IMPL_H__
 
-#include "kateglobal.h"
 #include "../interfaces/view.h"
 
 #include <qvaluelist.h>
