@@ -20,8 +20,6 @@
 #ifndef _KATE_TEXTLINE_H_
 #define _KATE_TEXTLINE_H_
 
-#include "kateglobal.h"
-
 #include <qmemarray.h>
 #include <ksharedptr.h>
 #include <qvaluevector.h>
