@@ -1,3 +1,6 @@
+2002-05-11 Christian Couder <christian@kdevelop.org>
+  * implement the KTextEditor::Cursor in the KateCursor class 
+
 2002-05-04 Christoph Cullmann <cullmann@kde.org>
   * first KTextEditor::ViewPlugin which works
     drop the helloworld plugin, as it is really no good example (bad code, ..)
